@@ -506,10 +506,11 @@ CSetting *SettingNewFromPyList(PyObject *list);
 #define cSetting_auto_classify_atoms        360
 #define cSetting_cartoon_nucleic_acid_mode  361
 #define cSetting_seq_view_color             362
+#define cSetting_seq_view_label_mode        363
 
 /* cSetting_ss_INIT must always be last setting_index +1 */
 
-#define cSetting_INIT                       363
+#define cSetting_INIT                       364
 
 #endif
 
