@@ -66,6 +66,7 @@ ObjectMap *ObjectMapLoadCCP4File(ObjectMap *obj,char *fname,int state);
 ObjectMap *ObjectMapReadCCP4Str(ObjectMap *I,char *XPLORStr,int bytes,int state);
 int ObjectMapCCP4StrToMap(ObjectMap *I,char *XPLORStr,int bytes,int state);
 
+ObjectMap *ObjectMapLoadDXFile(ObjectMap *obj,char *fname,int state);
 ObjectMap *ObjectMapLoadPHIFile(ObjectMap *obj,char *fname,int state);
 ObjectMap *ObjectMapLoadFLDFile(ObjectMap *obj,char *fname,int state);
 ObjectMap *ObjectMapLoadBRIXFile(ObjectMap *obj,char *fname,int state);
